@@ -1285,6 +1285,8 @@ TXML_FILTER_NAME=Wordfast TXML
 
 VISIO_FILTER_NAME=Visio
 
+WORDPRESS_FILTER_NAME=Wordpress
+
 #XML Spreadsheet 2003 filter
 XML_SPREADSHEET_FILTER_NAME=XML Spreadsheet 2003
 
@@ -1388,7 +1390,7 @@ ABOUTDIALOG_VERSION_REVISION=OmegaT version {0} ({1})
 ABOUTDIALOG_VERSION_UPDATE_REVISION=OmegaT version {0}, update {1} ({2})
 
 ABOUTDIALOG_TITLE=About OmegaT
-ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2014 Keith Godfrey, Maxym Mykhalchuk and others
+ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2016 Keith Godfrey, Maxym Mykhalchuk and others
 
 ABOUTDIALOG_LICENSE_BUTTON=&License
 ABOUTDIALOG_CONTRIBUTORS=\
