@@ -1,0 +1,60 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!-- This is a WordPress eXtended RSS file generated by WordPress as an export of your site. -->
+<!-- It contains information about your site's posts, pages, comments, categories, and other content. -->
+<!-- You may use this file to transfer that content from one site to another. -->
+<!-- This file is not intended to serve as a complete backup of your site. -->
+
+<!-- To import this information into a WordPress site follow these steps: -->
+<!-- 1. Log in to that site as an administrator. -->
+<!-- 2. Go to Tools: Import in the WordPress admin panel. -->
+<!-- 3. Install the "WordPress" importer from the list. -->
+<!-- 4. Activate & Run Importer. -->
+<!-- 5. Upload this file using the form provided on that page. -->
+<!-- 6. You will first be asked to map the authors in this export file to users -->
+<!--    on the site. For each author, you may choose to map to an -->
+<!--    existing user on the site or to create a new user. -->
+<!-- 7. WordPress will then import each of the posts, pages, comments, categories, etc. -->
+<!--    contained in this file into your site. -->
+
+<!-- generator="WordPress/4.4.1" created="2016-01-18 09:57" -->
+<rss version="2.0"
+	xmlns:excerpt="http://wordpress.org/export/1.2/excerpt/"
+	xmlns:content="http://purl.org/rss/1.0/modules/content/"
+	xmlns:wfw="http://wellformedweb.org/CommentAPI/"
+	xmlns:dc="http://purl.org/dc/elements/1.1/"
+	xmlns:wp="http://wordpress.org/export/1.2/"
+>
+
+<channel>
+	<title>Title</title>
+	<link>http://www.xxxx.com</link>
+	<description>This is a description</description>
+	<pubDate>Mon, 18 Jan 2016 09:57:27 +0000</pubDate>
+	<language>fr-FR</language>
+	<wp:wxr_version>1.2</wp:wxr_version>
+	<wp:category><wp:term_id>4</wp:term_id><wp:category_nicename><![CDATA[acccueil1]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[accueil1]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>47</wp:term_id><wp:category_nicename><![CDATA[accueil2]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[Accueil2]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>49</wp:term_id><wp:category_nicename><![CDATA[accueil3]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[accueil3]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>37</wp:term_id><wp:category_nicename><![CDATA[actualites]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[Diffusion]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>32</wp:term_id><wp:category_nicename><![CDATA[acccueil-2]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[home]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>84</wp:term_id><wp:category_nicename><![CDATA[information]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[Information]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>69</wp:term_id><wp:category_nicename><![CDATA[mediasrss]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[mediasrss]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>1</wp:term_id><wp:category_nicename><![CDATA[non-classe]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[Non classé]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>11</wp:term_id><wp:category_nicename><![CDATA[non-classe-en]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[Non classified]]></wp:cat_name></wp:category>
+	<wp:category><wp:term_id>39</wp:term_id><wp:category_nicename><![CDATA[promotion]]></wp:category_nicename><wp:category_parent><![CDATA[]]></wp:category_parent><wp:cat_name><![CDATA[Promotion]]></wp:cat_name></wp:category>
+	<wp:tag><wp:term_id>55</wp:term_id><wp:tag_slug><![CDATA[facebook]]></wp:tag_slug><wp:tag_name><![CDATA[facebook]]></wp:tag_name></wp:tag>
+	<wp:tag><wp:term_id>88</wp:term_id><wp:tag_slug><![CDATA[google]]></wp:tag_slug><wp:tag_name><![CDATA[Google+]]></wp:tag_name></wp:tag>
+	<wp:tag><wp:term_id>86</wp:term_id><wp:tag_slug><![CDATA[linkedin]]></wp:tag_slug><wp:tag_name><![CDATA[Linkedin]]></wp:tag_name></wp:tag>
+	<wp:tag><wp:term_id>57</wp:term_id><wp:tag_slug><![CDATA[twitter]]></wp:tag_slug><wp:tag_name><![CDATA[twitter]]></wp:tag_name></wp:tag>
+	<item>
+		<title>Reservation</title>
+		<link>http://www.xxx.com/</link>
+		<pubDate>Sun, 19 Jul 2015 10:18:45 +0000</pubDate>
+		<dc:creator><![CDATA[creator]]></dc:creator>
+		<description></description>
+		<content:encoded><![CDATA[<strong>This is a first sentence?</strong>
+
+This is the next paragraph.]]></content:encoded>
+	</item>
+</channel>
+</rss>
